# voice-agent

./: .gitignore  CLAUDE.md  README.md
docs/: README.md  architecture-analysis.md  architecture.md  cross-platform-consideration.md  custom-wake-word-guide.md  custom-wake-word-implementation-guide.md  development-guidelines.md  development-plan.md  document-organization-plan.md  documentation-standards.md  final-implementation-plan.md  git-workflow.md  implementation-roadmap.md  improved-architecture-design.md  language-specific-guidelines.md  local-first-architecture.md  mvp-implementation-plan.md  (+16 more)
sandbox/openwakeword/: README.md  continuous_detection.py  custom_threshold.py  download_models.py  pyproject.toml  wake_word_demo.py  wake_word_easy.py
sandbox/openwakeword/archive/: 20250623T020005-simple_test.py  20250623T020005-test_audio_monitor.py  20250623T020005-test_basic.py  20250623T020005-test_microphone.py  20250623T020005-test_multiple_wakewords.py  20250623T020005-test_with_predownloaded.py
sandbox/openwakeword/docs/: FINDINGS.md  SETUP.md  SUMMARY.md
sandbox/porcupine/: FINDINGS.md  PERFORMANCE_RESULTS.md  README.md  SETUP.md  VALIDATION.md  pyproject.toml  resource_monitor.py  test_custom_wake_word.py  test_multiple_patterns.py  test_wake_word_demo.py
sandbox/porcupine/archive/: 20250623T0216-quick_test.py  20250623T0216-test_basic.py  20250623T0216-test_init_only.py  20250623T0217-demo_simulation.py  test_key_format.py  test_with_key.py
sandbox/porcupine/docs/: CUSTOM_WAKE_WORD_GUIDE.md  multiple_wake_words_strategy.md  wake_word_comparison.md
(+124 files in other folders)
