[project]
name = "openwakeword-sandbox"
version = "0.1.0"
description = "OpenWakeWord testing environment"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "openwakeword>=0.5.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "onnxruntime>=1.16.0",
    "tqdm>=4.65.0",
]

[tool.uv]
dev-dependencies = [
    "matplotlib>=3.7.0",
    "soundfile>=0.12.0",
]